Add new conditions (#128)
Squashed:

Work for adding month conditions;
Work for adding date range conditions;
Update for Output and Sensor conditions to also have a `for` option;
