# api_spec/openapi_v2.yaml
@@ -1849,6 +1849,8 @@ paths:
               - "output"
               - "time"
               - "weekday"
+              - "month"
+              - "date-range"
       responses:
         200:
           description: "Success"
@@ -1869,6 +1871,8 @@ paths:
                                 - $ref: "#/components/schemas/OutputCondition"
                                 - $ref: "#/components/schemas/TimeCondition"
                                 - $ref: "#/components/schemas/WeekdayCondition"
+                                - $ref: "#/components/schemas/MonthCondition"
+                                - $ref: "#/components/schemas/DateRangeCondition"
         400:
           description: "Bad request"
           content:
@@ -1975,6 +1979,8 @@ paths:
               - "output"
               - "time"
               - "weekday"
+              - "month"
+              - "date-range"
       requestBody:
         required: true
         content:
@@ -1985,6 +1991,8 @@ paths:
                 - $ref: "#/components/schemas/OutputCondition"
                 - $ref: "#/components/schemas/TimeCondition"
                 - $ref: "#/components/schemas/WeekdayCondition"
+                - $ref: "#/components/schemas/MonthCondition"
+                - $ref: "#/components/schemas/DateRangeCondition"
       responses:
         201:
           description: "Created"
@@ -2004,6 +2012,8 @@ paths:
                               - $ref: "#/components/schemas/OutputCondition"
                               - $ref: "#/components/schemas/TimeCondition"
                               - $ref: "#/components/schemas/WeekdayCondition"
+                              - $ref: "#/components/schemas/MonthCondition"
+                              - $ref: "#/components/schemas/DateRangeCondition"
         400:
           description: "Bad request"
           content:
@@ -2111,6 +2121,8 @@ paths:
               - "output"
               - "time"
               - "weekday"
+              - "month"
+              - "date-range"
         - in: path
           name: conditionId
           required: true
@@ -2137,6 +2149,8 @@ paths:
                               - $ref: "#/components/schemas/OutputCondition"
                               - $ref: "#/components/schemas/TimeCondition"
                               - $ref: "#/components/schemas/WeekdayCondition"
+                              - $ref: "#/components/schemas/MonthCondition"
+                              - $ref: "#/components/schemas/DateRangeCondition"
 
         401:
           description: "Unauthorized"
@@ -2224,6 +2238,8 @@ paths:
               - "output"
               - "time"
               - "weekday"
+              - "month"
+              - "date-range"
         - in: path
           name: conditionId
           required: true
@@ -2241,6 +2257,8 @@ paths:
                 - $ref: "#/components/schemas/OutputCondition"
                 - $ref: "#/components/schemas/TimeCondition"
                 - $ref: "#/components/schemas/WeekdayCondition"
+                - $ref: "#/components/schemas/MonthCondition"
+                - $ref: "#/components/schemas/DateRangeCondition"
       responses:
         200:
           description: "Success"
@@ -2260,6 +2278,8 @@ paths:
                               - $ref: "#/components/schemas/OutputCondition"
                               - $ref: "#/components/schemas/TimeCondition"
                               - $ref: "#/components/schemas/WeekdayCondition"
+                              - $ref: "#/components/schemas/MonthCondition"
+                              - $ref: "#/components/schemas/DateRangeCondition"
         400:
           description: "Bad request"
           content:
@@ -2367,6 +2387,8 @@ paths:
               - "output"
               - "time"
               - "weekday"
+              - "month"
+              - "date-range"
         - in: path
           name: conditionId
           required: true
@@ -4100,6 +4122,8 @@ components:
                   - $ref: "#/components/schemas/OutputCondition"
                   - $ref: "#/components/schemas/TimeCondition"
                   - $ref: "#/components/schemas/WeekdayCondition"
+                  - $ref: "#/components/schemas/MonthCondition"
+                  - $ref: "#/components/schemas/DateRangeCondition"
             anyOf:
               items:
                 anyOf:
@@ -4107,6 +4131,8 @@ components:
                   - $ref: "#/components/schemas/OutputCondition"
                   - $ref: "#/components/schemas/TimeCondition"
                   - $ref: "#/components/schemas/WeekdayCondition"
+                  - $ref: "#/components/schemas/MonthCondition"
+                  - $ref: "#/components/schemas/DateRangeCondition"
             oneOf:
               items:
                 anyOf:
@@ -4114,6 +4140,8 @@ components:
                   - $ref: "#/components/schemas/OutputCondition"
                   - $ref: "#/components/schemas/TimeCondition"
                   - $ref: "#/components/schemas/WeekdayCondition"
+                  - $ref: "#/components/schemas/MonthCondition"
+                  - $ref: "#/components/schemas/DateRangeCondition"
         output:
           type: object
           properties:
@@ -4124,6 +4152,8 @@ components:
                   - $ref: "#/components/schemas/OutputCondition"
                   - $ref: "#/components/schemas/TimeCondition"
                   - $ref: "#/components/schemas/WeekdayCondition"
+                  - $ref: "#/components/schemas/MonthCondition"
+                  - $ref: "#/components/schemas/DateRangeCondition"
             anyOf:
               items:
                 anyOf:
@@ -4131,6 +4161,8 @@ components:
                   - $ref: "#/components/schemas/OutputCondition"
                   - $ref: "#/components/schemas/TimeCondition"
                   - $ref: "#/components/schemas/WeekdayCondition"
+                  - $ref: "#/components/schemas/MonthCondition"
+                  - $ref: "#/components/schemas/DateRangeCondition"
             oneOf:
               items:
                 anyOf:
@@ -4138,6 +4170,8 @@ components:
                   - $ref: "#/components/schemas/OutputCondition"
                   - $ref: "#/components/schemas/TimeCondition"
                   - $ref: "#/components/schemas/WeekdayCondition"
+                  - $ref: "#/components/schemas/MonthCondition"
+                  - $ref: "#/components/schemas/DateRangeCondition"
         time:
           type: object
           properties:
@@ -4148,6 +4182,8 @@ components:
                   - $ref: "#/components/schemas/OutputCondition"
                   - $ref: "#/components/schemas/TimeCondition"
                   - $ref: "#/components/schemas/WeekdayCondition"
+                  - $ref: "#/components/schemas/MonthCondition"
+                  - $ref: "#/components/schemas/DateRangeCondition"
             anyOf:
               items:
                 anyOf:
@@ -4155,6 +4191,8 @@ components:
                   - $ref: "#/components/schemas/OutputCondition"
                   - $ref: "#/components/schemas/TimeCondition"
                   - $ref: "#/components/schemas/WeekdayCondition"
+                  - $ref: "#/components/schemas/MonthCondition"
+                  - $ref: "#/components/schemas/DateRangeCondition"
             oneOf:
               items:
                 anyOf:
@@ -4162,6 +4200,8 @@ components:
                   - $ref: "#/components/schemas/OutputCondition"
                   - $ref: "#/components/schemas/TimeCondition"
                   - $ref: "#/components/schemas/WeekdayCondition"
+                  - $ref: "#/components/schemas/MonthCondition"
+                  - $ref: "#/components/schemas/DateRangeCondition"
       
     SensorCondition:
       description: >
@@ -4190,6 +4230,10 @@ components:
             comparisonValue:
               type: number
               example: 50
+            comparisonLookback:
+              nullable: true
+              type: number
+              example: 3
             sensorId:
               type: number
               example: 1
@@ -4227,6 +4271,10 @@ components:
           comparisonValue:
             type: number
             example: 50
+          comparisonLookback:
+            nullable: true
+            type: number
+            example: 3
           outputId:
             type: number
             example: 1
@@ -4280,6 +4328,60 @@ components:
             description: "A decimal conversion of a bitmask representing the days of the week: Sunday = 1, Monday = 2, Tuesday = 4, etc."
             type: number
             example: 127
+
+    MonthCondition:
+      description: >
+        Defines a condition based on the months of the year.
+      allOf:
+      - type: object
+      - properties:
+          id:
+            type: number
+            readOnly: true
+            example: 1
+          groupType: 
+            type: string
+            enum:
+              - allOf
+              - anyOf
+              - oneOf
+          months:
+            description: "A decimal conversion of a bitmask representing the months of the year: January = 1, February = 2, March = 4, etc."
+            type: number
+            example: 4095
+    
+    DateRangeCondition:
+      description: >
+        Defines a condition for an interval of dates of the year.
+      allOf:
+      - type: object
+      - properties:
+          id:
+            type: number
+            readOnly: true
+            example: 1
+          groupType: 
+            type: string
+            enum:
+              - allOf
+              - anyOf
+              - oneOf
+          startMonth:
+            description: "The month the date range starts on, as a number from 1 to 12."
+            type: number
+            example: 1
+          startDay:
+            description: "The day the date range starts on, with the first day of the month as 1 and the last day as 28-31."
+            type: number
+            example: 1
+          endMonth:
+            description: "The month the date range ends on, as a number from 1 to 12."
+            type: number
+            example: 12
+          endDay:
+            description: "The day the date range ends on, with the first day of the month as 1 and the last day as 28-31."
+            type: number
+            example: 31
 
     SDBSensor:
       description: >
