# server/src/automation/conditions/SensorCondition.ts
@@ -11,6 +11,7 @@ export class SensorCondition implements ISensorCondition {
   readingType: ReadingType;
   operator: ConditionOperator;
   comparisonValue: number;
+  comparisonLookback: number | null;
 
   constructor(
     id: number,
@@ -19,6 +20,7 @@ export class SensorCondition implements ISensorCondition {
     readingType: ReadingType,
     operator: ConditionOperator,
     comparisonValue: number,
+    comparisonLookback: number | null,
   ) {
     this.id = id;
     this.groupType = groupType;
@@ -26,12 +28,33 @@ export class SensorCondition implements ISensorCondition {
     this.readingType = readingType;
     this.operator = operator;
     this.comparisonValue = comparisonValue;
+    this.comparisonLookback = comparisonLookback;
   }
 
-  evaluate(sensorList: SensorList): boolean {
-    const reading = sensorList.sensors[this.sensorId]?.lastReading[this.readingType];
-    return reading != null
-      ? evaluateNumber(parseFloat(reading), this.operator, this.comparisonValue)
-      : false;
+  evaluate(sensorList: SensorList, now: Date = new Date()): boolean {
+    if (this.comparisonLookback == null || this.comparisonLookback == 0) {
+      const lastSensorValue = sensorList.sensors[this.sensorId]?.lastReading[this.readingType];
+      return lastSensorValue != null
+        ? evaluateNumber(parseFloat(lastSensorValue), this.operator, this.comparisonValue)
+        : false;
+    }
+
+    const sensorValues = sensorList.sensors[this.sensorId]
+      ?.getCachedReadings()
+      ?.[this.readingType]?.slice(-this.comparisonLookback)
+      ?.filter(
+        (lastReading) =>
+          new Date(lastReading.logTime).getTime() >=
+          now.getTime() - this.comparisonLookback! * 60000,
+      )
+      ?.map((lastReading) => lastReading.data);
+
+    if (sensorValues == null || sensorValues.length < this.comparisonLookback) {
+      return false;
+    }
+
+    return sensorValues.every((sensorValue) => {
+      return evaluateNumber(parseFloat(sensorValue), this.operator, this.comparisonValue);
+    });
   }
 }
